--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(22,25,41);
+  color: rgb(255, 255, 255);
 }
 
 code {
