polished things up for demo

--- a/my-app/src/Pages/404Page/404.scss
+++ b/my-app/src/Pages/404Page/404.scss
@@ -2,7 +2,7 @@
 /*
 add a temporal image for the entire page
 */
-background-color: aqua;
+background-color:  rgb(58,29,171); 
 }
 .message{
     text-align:center;
