--- a/my-app/src/Components/Footer/footerFile.scss
+++ b/my-app/src/Components/Footer/footerFile.scss
@@ -2,17 +2,14 @@
 .footer {
     background-color: #333;
     color: #fff;
-    text-align: center;
-    padding: 20px;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: #041f37;
     color: white;
     height: 100px;
-    padding: 0 20px;
   }
 
 
@@ -20,7 +17,6 @@
   .middle-content,
   .right-content {
     max-width: 30%; /* Limit the width of the right content */
-    
     white-space: nowrap; /* Prevent text from wrapping */
     text-overflow: ellipsis; /* Show ellipsis (...) for overflowed text */
   }
