--- a/my-app/src/Components/LanguageTags/Languagetags.scss
+++ b/my-app/src/Components/LanguageTags/Languagetags.scss
@@ -1,4 +1,6 @@
 .Languagetags {
+	margin-top: 5px;
+	margin-left: 5px;
 	display: flex;
 	flex-direction: row;
 }
@@ -16,7 +18,7 @@
 	padding: 5px 10px;
 	margin: 5px;
 	cursor: pointer;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: 600;
 	border: 1px solid black;
   }
