--- a/my-app/src/Components/NavBar/NavBar.css
+++ b/my-app/src/Components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
 
 nav {
-    background-image: linear-gradient(rgb(113, 88, 226), rgb(9, 9, 9));
+    background-image: linear-gradient(rgb(113, 88, 226), #673AB7);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,7 +10,7 @@ nav {
 
 .brand {
     color: white;
-    font-size: 1.5em;
+    font-size: 2.0em;
     font-family: 'Agbalumo', sans-serif; /* Apply the imported font to "Lasso" */
     align-items: flex-start;
 }
