--- a/my-app/src/Components/VideoCall/VideoCallComponent.scss
+++ b/my-app/src/Components/VideoCall/VideoCallComponent.scss
@@ -1,20 +1,29 @@
 /* Room.css */
-.fullscreen-video {
-    width: 100vw;
-    height: 100vh;
+.videoContainer{
+	
+	width: 90vw;
+	margin: 0vw 5vw;
+	height: 80vh;
+	z-index: -1;
+}
+
+.userVideo {
+	width: 100%;
+	height: 100%;
     margin: 0;
     padding: 0;
     z-index: 1; 
+	 border-radius: 75px;
+	 
 }
   
-.small-video {
-    width: 30vw;
+.pertnerVideo {
+    width: 20vw;
     height: auto;
     position: absolute;
-    top: 10px;
-    left: 10px;
-    border: 1px solid #ccc;
+	 left:0px;
     z-index: 2; 
+	 border-radius: 20px;
 }
 
 
