--- a/my-app/src/Components/Navbar/Navbar.scss
+++ b/my-app/src/Components/Navbar/Navbar.scss
@@ -1,11 +1,44 @@
-@import '../../variables';
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
 
-.Navbar{
-	background-color: $backgroundColor;
+nav {
+    background-image: linear-gradient(rgb(113, 88, 226), #673AB7);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
 }
 
-.logo{
-	color:darkcyan;
-	font-size: 5vw;
-	margin: 0px 20px;
+.brand {
+    color: white;
+    font-size: 2.0em;
+    font-family: 'Agbalumo', sans-serif; 
+    align-items: flex-start;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    margin-left: auto; 
+}
+
+li {
+    margin: 0 10px;
+}
+
+a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+a:hover {
+    
+    color: rgb(255, 255, 255);
+    text-decoration: underline; 
 }
